Regression: The location of "Viewport Gizmos" is not correct in POSE mode (multi-object/armature editing, multiple bones selected) #96347

Closed
opened 2022-03-11 19:51:01 +01:00 by cuong · 9 comments

Linux mint 19
Operating system:
Graphics card: rtx 2060

Blender Version
Broken: (3.x)
Worked: (2.x)

Caused by d052169e7e

Short description of error
The location of "Viewport Gizmos" is not correct in POSE mode if select multiple bones

Exact steps for others to reproduce the error
1 : Shift A and Add two "Armature Objects" to the World Origin
2 : Go to POSE mode
3 : Select 2 bones of 2 Armatures and move them up or down (Z axis) about 10m
4 : Move the 2 bones slightly apart so that both bones can be selected easily
5: When have selected both bones, we see the location of "Viewport Gizmos" is not correct (it's not in between the 2 bones)
bug.blend

**Linux mint 19** Operating system: Graphics card: rtx 2060 **Blender Version** Broken: (3.x) Worked: (2.x) Caused by d052169e7e **Short description of error** The location of "Viewport Gizmos" is not correct in POSE mode if select multiple bones **Exact steps for others to reproduce the error** 1 : Shift A and Add two "Armature Objects" to the World Origin 2 : Go to POSE mode 3 : Select 2 bones of 2 Armatures and move them up or down (Z axis) about 10m 4 : Move the 2 bones slightly apart so that both bones can be selected easily 5: When have selected both bones, we see the location of "Viewport Gizmos" is not correct (it's not in between the 2 bones) [bug.blend](https://archive.blender.org/developer/F12921747/bug.blend)
Author

Added subscriber: @vuiquahuhu

Added subscriber: @vuiquahuhu

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

It appears to be a recent regression.
I'll look for the commit that introduced the problem. In the meantime I'm confirming it as high priority.

It appears to be a recent regression. I'll look for the commit that introduced the problem. In the meantime I'm confirming it as high priority.
Philipp Oeser changed title from The location of "Viewport Gizmos" is not correct in POSE mode if select multiple bones to The location of "Viewport Gizmos" is not correct in POSE mode (multi-object/armature editing, multiple bones selected) 2022-03-25 13:13:26 +01:00
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Member

Caused by d052169e7e

CC @ideasman42

Caused by d052169e7e CC @ideasman42
Philipp Oeser changed title from The location of "Viewport Gizmos" is not correct in POSE mode (multi-object/armature editing, multiple bones selected) to Regression: The location of "Viewport Gizmos" is not correct in POSE mode (multi-object/armature editing, multiple bones selected) 2022-03-25 13:26:14 +01:00
Campbell Barton self-assigned this 2022-03-29 03:02:22 +02:00

This issue was referenced by f99beb730a

This issue was referenced by f99beb730aa822d8b0b77bf85dbe0db5c7b757a3

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

This issue was referenced by b20b672e76

This issue was referenced by b20b672e76b882887d49d573a780b2f5e3858156
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96347
No description provided.