Fix T96347: Pose gizmo shown at wrong location with multiple objects

Regression in [0] follow the same logic as edit-mode for using the local-matrix.

[0]: d052169e7e4b84b5d621fcbf15b187a4951f1f70